# Graph-Coloring

./: .clang-format  .gitignore  CMakeLists.txt  GraphColoring.cpp  GraphColoring.h  LICENSE.txt  RandomGenerator.h  Readme.md  Solution.cpp  Solution.h  Solver.cpp  Solver.h  main.cpp
instance/result/: 0.sol  1.sol  2.sol  3.sol  4.sol  5.sol  6.sol  7.sol  8.sol  9.sol
