cmake_minimum_required(VERSION 3.20)
project(GraphColoring)
set(CMAKE_CXX_STANDARD 20)
add_definitions(-DDEBUG -DAUTO_SAVE)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
file(GLOB HEAD ${PROJECT_SOURCE_DIR}/*.h)
include_directories(${HEAD})
file(GLOB SRC ${PROJECT_SOURCE_DIR}/*.cpp)
add_executable(GraphColoring ${SRC} ${HEAD})
